whyred: Add secondary interface using gEnableConcurrentSTA=wlan1
gEnableConcurrentSTA=wlan1 will create wlan1 while insmod driver.

Change-Id: Ia7ce00bbc9cb030320bc3bd84f8795c3583ef8b1
CRs-Fixed: 2258995

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -594,6 +594,9 @@ gChannelBondingMode24GHz=0
 gActiveUcBpfMode=1
 gActiveMcBcBpfMode=1
 
+# Add another interface while driver load
+gEnableConcurrentSTA=wlan1
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
