[EXP]whyred: Use aosp offline charging
* Miui one dosen't work anymore and i'm not gonna debug it

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -634,7 +634,7 @@ service vendor.ril-daemon3 /vendor/bin/hw/rild -c 3
     group radio cache inet misc audio sdcard_r sdcard_rw diag oem_2901 log
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
-service charger /sbin/chargeonlymode
+service charger /system/bin/charger
     class charger
     group system graphics
     capabilities SYS_BOOT
