whyred: rootdir: set poweroff alarm service
Signed-off-by: Eric Farias <erikofarias@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -662,6 +662,12 @@ service time_daemon /system/vendor/bin/time_daemon
     user root
     group root
 
+service vendor.power_off_alarm /vendor/bin/power_off_alarm
+    class core
+    group system
+    disabled
+    oneshot
+
 # Set vendor-ril lib path based on Meta version
 on property:vendor.rild.libpath=*
     setprop rild.libpath ${vendor.rild.libpath}
