--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -263,6 +263,7 @@ on charger
     start vendor.hvdcp_opti
     setprop sys.usb.configfs 1
     start thermal-engine
+    start vendor.power_off_alarm
 
 service vendor.hvdcp_opti /system/vendor/bin/hvdcp_opti
     class main
