--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -460,6 +460,13 @@ on property:sys.boot_completed=1
     chown media audio /sys/kernel/wdsp0/boot
     chown media audio /sys/kernel/wcd_cpe0/fw_name
 
+    # Disable I/O stats on both the internal and external drives
+
+    # Internal
+    write /sys/block/mmcblk0/queue/iostats 0
+    # External
+    write /sys/block/mmcblk1/queue/iostats 0
+
 on property:persist.vendor.radio.atfwd.start=false
     stop vendor.atfwd
 
